--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                         <img class="img-pedit" src="images/rac/photo2.jpg" alt="General Contracting">
                     </div>
                     <div class="service-content" style="margin-top: 30px;">
-                        <h3>ThermoEdge Skilled Labor</h3>
+                        <h3>AC Mechanical Labor</h3>
                         <p>Top-tier HVAC-R technicians for advanced climate control systems.</p>
                     </div>
                 </div>
@@ -619,7 +619,7 @@
                                     <p class="position">Chairman</p>
                                     <p class="company">Saud Faraj Al Harabi Company</p>
                                 </div>
-                                <a href="#" class="view-more-link">View More <i class="fas fa-arrow-right"></i></a>
+                                <!-- <a href="#" class="view-more-link">View More <i class="fas fa-arrow-right"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -636,7 +636,7 @@
                                     <p class="position">CEO</p>
                                     <p class="company">Saud Faraj Al Harabi Company</p>
                                 </div>
-                                <a href="#" class="view-more-link">View More <i class="fas fa-arrow-right"></i></a>
+                                <!-- <a href="#" class="view-more-link">View More <i class="fas fa-arrow-right"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -653,8 +653,8 @@
                                     <p class="position">Director</p>
                                     <p class="company">Saud Faraj Al Harabi Company</p>
                                 </div>
-                                <a href="portfolio2/index.html" class="view-more-link">View More <i
-                                        class="fas fa-arrow-right"></i></a>
+                                <!-- <a href="portfolio2/index.html" class="view-more-link">View More <i
+                                        class="fas fa-arrow-right"></i></a>  -->
                             </div>
                         </div>
                     </div>
@@ -671,8 +671,8 @@
                                     <p class="position">HR & Client Dealing Officer</p>
                                     <p class="company">Saud Faraj Al Harabi Company</p>
                                 </div>
-                                <a href="portfolio1/index.html" class="view-more-link">View More <i
-                                        class="fas fa-arrow-right"></i></a>
+                                <!-- <a href="portfolio1/index.html" class="view-more-link">View More <i
+                                        class="fas fa-arrow-right"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -689,8 +689,8 @@
                                     <p class="position">Project Manager</p>
                                     <p class="company">Saud Faraj Al Harabi Company</p>
                                 </div>
-                                <a href="portfolio1/index.html" class="view-more-link">View More <i
-                                        class="fas fa-arrow-right"></i></a>
+                                <!-- <a href="portfolio1/index.html" class="view-more-link">View More <i
+                                         class="fas fa-arrow-right"></i></a> -->
                             </div>
                         </div>
                     </div>
