--- a/index.html
+++ b/index.html
@@ -41,48 +41,40 @@
             </div>
         </div>
     </header>
-
     <!-- Hero Section -->
-    <section class="hero" id="home">
-        <div class="container"
-            style="background:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(images/hero-bg.jpg);width: 2000px;">
+    <section class="hero" id="home" style="background: url('images/13.jpg') no-repeat center center/cover; height: 80vh;">
+        <div class="hero-background"></div>
+        <div class="container">
             <div class="hero-content">
-                <h1 class="text-3d">SAUD FARAJ AL HARBI COMPANY</h1>
-                <p>Saud Faraj Al Harbi Company redefines global recruitment by blending human
-                    potential with ethical excellence. We don’t just place talent—we craft success stories, matching
-                    world-class professionals with visionary employers through integrity-driven solutions. Where
-                    opportunity meets expertise, we build futures.</p>
-                <a href="#contact" class="btn">contact</a>
+                <h1>SAUD FARAJ AL HARBI COMPANY</h1>
+                <p>Saud Faraj Al Harbi Company redefines global recruitment by blending human potential with ethical
+                    excellence. We don’t just place workers—we craft success stories, matching world-class professionals
+                    with visionary employers through integrity-driven solutions. Where opportunity meets expertise, we
+                    build futures.</p>
+                <a href="#contact" class="btn">Contact Us</a>
             </div>
-        </div>
         </div>
     </section>
     <!-- About Section -->
-    <section class="about section-padding" id="about">
+    <section class="about section-padding" id="about" data-section="about">
         <div class="container">
-            <div class="about-content section-title">
+            <div class="about-content">
                 <div class="about-image">
-                    <img src="images/logo2.png" alt="About CFM Saudi">
+                    <img src="images/logo2.png" alt="About Saud Faraj Al Harbi Company" loading="lazy">
                 </div>
                 <div class="about-text boxstyle service-card">
-                    <h3 class="about-text">About Saud Faraj Al <br> Harbi Company</h3>
-                    <p>Saud Faraj Al Harbi Company is a top recruitment firm linking skilled global workers with
-                        international job opportunities. We specialize in sourcing and training professionals while
-                        ensuring fair labor practices. Our mission is to bridge talent with employers ethically and
-                        efficiently.</p>
+                    <h3 class="about-title">About Saud Faraj Al Harbi Company</h3>
+                    <p class="about-description">Saud Faraj Al Harbi Company is a top recruitment firm linking skilled global workers with international job opportunities. We specialize in sourcing and training professionals while ensuring fair labor practices. Our mission is to bridge talent with employers ethically and efficiently.</p>
                     <a href="#services" class="btn">Our Services</a>
                 </div>
             </div>
-            <div class="about-content section-title">
+            <div class="about-content">
                 <div class="about-image">
-                    <img src="images/who.png" alt="About CFM Saudi">
+                    <img src="images/who.png" alt="Who We Are - Saud Faraj Al Harbi Company" loading="lazy">
                 </div>
                 <div class="about-text boxstyle service-card">
-                    <h3>Who We Are</h3>
-                    <p>Saud Faraj Al Harbi Company is a trusted recruitment agency connecting skilled global talent with
-                        rewarding job opportunities. We provide ethical manpower solutions, bridging employers and
-                        professionals worldwide. Committed to excellence and fairness, we build lasting partnerships
-                        that drive success for businesses and workers alike.</p>
+                    <h3 class="about-title">Who We Are</h3>
+                    <p class="about-description">Saud Faraj Al Harbi Company is a trusted recruitment agency connecting skilled global talent with rewarding job opportunities. We provide ethical manpower solutions, bridging employers and professionals worldwide. Committed to excellence and fairness, we build lasting partnerships that drive success for businesses and workers alike.</p>
                     <a href="#services" class="btn">Our Services</a>
                 </div>
             </div>
@@ -574,7 +566,8 @@
                 <div class="testimonial">
                     <div class="testimonial-content  service-card2">
                         <div class="quote-icon"><i class="fas fa-quote-left"></i></div>
-                        <p class="testimonial-text">Working with Saud Faraj Al Harabi Company has transformed our operations.
+                        <p class="testimonial-text">Working with Saud Faraj Al Harabi Company has transformed our
+                            operations.
                             Their innovative solutions and local market knowledge have given us a competitive edge in
                             Saudi Arabia.</p>
                         <div class="client-info">
